페이스북, 트위터 링크 삭제

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Configurations
-title:            Jun Beom Blog
+title:            Knowledge Repository
 longtitle:        Blog for storing knowledge
 author:           jblim0125
 email:            jblim0125@gmail.com
